--- a/Navigation.ipynb
+++ b/Navigation.ipynb
@@ -298,12 +298,31 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# 2. The Agent\n",
     "\n",
-    "The system will utilize a Deep Q-Network that take advantage of the \"Experience Replay\" and the \"Fixed Q-Targets\" optimizations.\n",
+    "The system will utilize a Deep Q-Network that take advantage of the `Experience Replay` and the `Fixed Q-Targets` optimizations.\n",
+    "\n",
+    "One big thing to note is that since in RL the training dataset is created while each episode unfolds (it is not an offline dataset that pre-exists before training), it is hard to really calculate the error function.\n",
+    "\n",
+    "\n",
+    "### Fixed-Q-Targets GIF Animation:\n",
+    "\n",
+    "I Made a *Fixed Q-Targets GIF* to help visualize the concept of the 2 replicas (local and target) DQNs when it comes to training Neural Networks in Reinforcement Learning.\n",
+    "\n",
+    "You are an online model (you produce, with each consecutive move, your own training dataset - \"on the go\").\n",
+    "\n",
+    "You make some discoveries based on your existing weights. So you have to produce new weights based on your existing weights discoveries. You really try to improve yourself, using \"yourself\". This won't really work...\n",
+    "\n",
+    "You need to keep your distances and use a target network that is your replica, and then use this network as the target based on which you make your changes. After a few steps, you just sync the two networks again and keep going.\n",
+    "\n",
+    "I always saw the single network as a visualization of being inside a wooden raft, blowing at it, hoping it will \"move\"... which simply... doesn't work! Instead, you had to take your distance with a replicated network based on which you train some batches (which works!), then after this number of batches sync again the networks and keep going.\n",
+    "\n",
+    "![Fixed-Q-Targets](fixed-q-targets.gif)\n",
+    "\n",
     "\n",
     "### 2.1. - The Params\n",
     "\n",
@@ -312,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,14 +803,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 16.0"
+      "Score: 8.0"
      ]
     }
    ],
